Add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="GymBuddies. Group Training. Gym Training. Fitness, strength, cardio. Coaching. " />
+    <meta name="keywords"
+        content="GymBuddies. group training. workout. gym. coaching. fitness. strength training. cardio training. social. exercise." />
     <!-- Title -->
     <title>GymBuddies</title>
 
