--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>Header</header>
+    <!-- Main -->
+    <main>Main Content</main>
+    <!-- Footer -->
+    <footer>Footer</footer>
 </body>
 </html>
