--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="icon" sizes="180x180" href="assets/favicon/favicon.gymbuddies.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon.gymbuddies.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon.gymbuddies.png" />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
 <body>
