--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
         <a href="index.html">
             <h1 id="logo">GymBuddies</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pictures.html">Pictures</a></li>
+                <li><a href="sign-up.html">Sign-Up</a></li>
+            </ul>
+        </nav>
     </header>
+    
     <!-- Main -->
     <main>Main Content</main>
+    
     <!-- Footer -->
     <footer>Footer</footer>
 </body>
