--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h1 id="logo">GymBuddies</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="sign-up.html">Sign-Up</a></li>
             </ul>
