--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
     <main>Main Content</main>
     
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Facebook page (opens in new tab)" ><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="http://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Twitter page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="http://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="http://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Youtube page (opens in new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
+        </ul>
+    </footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/87712c3752.js" crossorigin="anonymous"></script>
 </body>
 </html>
