--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <!-- Footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="visit our Facebook page (opens in new tab)" ><i class="fa-brands fa-square-facebook"></i></a></li>
             <li><a href="http://www.twitter.com/" target="_blank" rel="noopener"
