--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     </header>
     
     <!-- Main -->
-    <main>Main Content</main>
+    <main>
+        <section id="hero-image">
+        </section>
+    </main>
     
     <!-- Footer -->
     <footer>
