--- a/index.html
+++ b/index.html
@@ -38,7 +38,39 @@
     
     <!-- Main -->
     <main>
-        <section id="hero-image">
+        <section id="hero-image"></section>
+
+        <!-- Join us -->
+        <section id="join-us">
+            <div id="reasons" class="text-boxes">
+                <h2>Come train with us!</h2>
+                <p>Struggeling with getting started?</p>
+                <p>Looking for like-minded individuals to keep you motivated?</p>
+                <p>Want a more social workout-experience?</p>
+                <p>You have come to the right place!</p>
+            </div>
+            <div id="information" class="text-boxes">
+                <div id="description">
+                    <h3>Who are we?</h3>
+                    <p>We are a group of trainers and coaches who offer group training at various gyms in Central Stockholm</p>
+                    <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
+                </div>
+                <div class="text-boxes">
+                    <h3>Session types and times</h3>
+                    <div id="types-times">
+                        <div>
+                            <h4>Group Strength</h4>
+                            <p>Monday, Wednesday, Thursday, Saturday</p>
+                            <p>19:30-20:30</p>
+                        </div>
+                        <div>
+                            <h4>Group Cardio</h4>
+                            <p>Monday, Tuesday, Thursday, Sunday</p>
+                            <p>17:00-17:45</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     
