--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 <p>Want a more social workout-experience?</p>
                 <p>You have come to the right place!</p>
             </div>
-            <div id="information" class="text-boxes">
-                <div id="description">
+            <div id="information">
+                <div id="description" class="text-boxes">
                     <h3>Who are we?</h3>
                     <p>We are a group of trainers and coaches who offer group training at various gyms in Central Stockholm</p>
                     <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
                 </div>
-                <div class="text-boxes">
+                <div id="types-times" class="text-boxes">
                     <h3>Session types and times</h3>
-                    <div id="types-times">
+                    <div>
                         <div>
                             <h4>Group Strength</h4>
                             <p>Monday, Wednesday, Thursday, Saturday</p>
