Add CSS styling to text content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">GymBuddies</h1>
+            <h1 id="logo">Gym-buddies</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -52,7 +52,7 @@
             <div id="information">
                 <div id="description" class="text-boxes">
                     <h3>Who are we?</h3>
-                    <p>We are a group of trainers and coaches who offer group training at various gyms in Central Stockholm</p>
+                    <p>We are a group of trainers and coaches who offer group training at various gyms in Central Stockholm.</p>
                     <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
                 </div>
                 <div id="types-times" class="text-boxes">
