Add images to Pictures page

--- a/pictures.html
+++ b/pictures.html
@@ -37,7 +37,19 @@
     </header>
     
     <!-- Main -->
-    <main>Main Content</main>
+    <main>
+        <section id="pictures">
+            <h2>Pictures</h2>
+            <div>
+                <img src="/assets/images/group-training.jpg" alt="">
+                <img src="/assets/images/group-cardio.jpg" alt="">
+                <img src="/assets/images/weigthlifting.jpg" alt="">
+                <img src="/assets/images/group-warmup.jpg" alt="">
+                <img src="/assets/images/photo-coaching.jpg" alt="">
+                <img src="/assets/images/weights.jpg" alt="">
+            </div>
+        </section>
+    </main>
     
     <!-- Footer -->
     <footer>
