Add styling and media query for screen-sizes to Pictures page

--- a/pictures.html
+++ b/pictures.html
@@ -39,14 +39,14 @@
     <!-- Main -->
     <main>
         <section id="pictures">
-            <h2>Pictures</h2>
+            <h2 class="hidden-heading">Pictures</h2>
             <div>
                 <img src="/assets/images/group-training.jpg" alt="">
                 <img src="/assets/images/group-cardio.jpg" alt="">
+                <img src="/assets/images/weights.jpg" alt="">
                 <img src="/assets/images/weigthlifting.jpg" alt="">
                 <img src="/assets/images/group-warmup.jpg" alt="">
                 <img src="/assets/images/photo-coaching.jpg" alt="">
-                <img src="/assets/images/weights.jpg" alt="">
             </div>
         </section>
     </main>
