--- a/sign-up.html
+++ b/sign-up.html
@@ -37,7 +37,39 @@
     </header>
     
     <!-- Main -->
-    <main>Main Content</main>
+    <main>
+        <section>
+            <div id="sign-up">
+                <form id="signup-form" class="text-boxes" action="https://formdump.codeinstitute.net" method="post">
+                    <h2>Join us!</h2>
+                    <!-- Sign up inputs -->
+                    <label for="f-name">First name:</label>
+                    <input type="text" id="f-name" name="f-name" required>
+                    <br>
+                    <label for="l-name">Last name:</label>
+                    <input type="text" id="l-name" name="l-name" required>
+                    <br>
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" required>
+                    <br>
+                    <div id="radio-buttons">
+                        <h3>Excercise preference: </h3>
+                        <label for="radio-strength">Strength</label>
+                        <input type="radio" id="radio-strength" value="strength" name="training-preference" required>
+
+                        <label for="radio-cardio">Cardio</label>
+                        <input type="radio" id="radio-cardio" value="cardio" name="training-preference" required>
+
+                        <label for="radio-both">Both</label>
+                        <input type="radio" id="radio-both" value="both" name="training-preference" required checked>
+                    </div>
+                    <br>
+                    <label for="submit"></label>
+                    <input type="submit" id="submit" value="Submit">
+                </form>
+            </div>
+        </section>
+    </main>
     
     <!-- Footer -->
     <footer>
