Correct file path to photos

--- a/pictures.html
+++ b/pictures.html
@@ -41,12 +41,12 @@
         <section id="pictures">
             <h2 class="hidden-heading">Pictures</h2>
             <div>
-                <img src="../images/group-training.jpg" alt="Group of people resistance training">
-                <img src="../images/group-cardio.jpg" alt="Group of people on exercise bikes">
-                <img src="../images/weights.jpg" alt="Weight being added to barbell">
-                <img src="../images/weigthlifting.jpg" alt="Man holding barbell overhead">
-                <img src="../images/group-warmup.jpg" alt="Group of people instructed during warm-up">
-                <img src="../images/photo-coaching.jpg" alt="Man coaching woman exercising">
+                <img src="assets/images/group-training.jpg" alt="Group of people resistance training">
+                <img src="assets/images/group-cardio.jpg" alt="Group of people on exercise bikes">
+                <img src="assets/images/weights.jpg" alt="Weight being added to barbell">
+                <img src="assets/images/weigthlifting.jpg" alt="Man holding barbell overhead">
+                <img src="assets/images/group-warmup.jpg" alt="Group of people instructed during warm-up">
+                <img src="assets/images/photo-coaching.jpg" alt="Man coaching woman exercising">
             </div>
         </section>
     </main>
