Change file type+size on images for faster loading

--- a/pictures.html
+++ b/pictures.html
@@ -12,9 +12,9 @@
     <title>GymBuddies</title>
 
     <!-- Favicon -->
-    <link rel="icon" sizes="180x180" href="assets/favicon/favicon.gymbuddies.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon.gymbuddies.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon.gymbuddies.png" />
+    <link rel="icon" sizes="180x180" href="assets/favicon/favicon-gymbuddies.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-gymbuddies.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-gymbuddies.png" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -41,12 +41,12 @@
         <section id="pictures">
             <h2 class="hidden-heading">Pictures</h2>
             <div>
-                <img src="assets/images/group-training.jpg" alt="Group of people resistance training">
-                <img src="assets/images/group-cardio.jpg" alt="Group of people on exercise bikes">
-                <img src="assets/images/weights.jpg" alt="Weight being added to barbell">
-                <img src="assets/images/weigthlifting.jpg" alt="Man holding barbell overhead">
-                <img src="assets/images/group-warmup.jpg" alt="Group of people instructed during warm-up">
-                <img src="assets/images/photo-coaching.jpg" alt="Man coaching woman exercising">
+                <img src="assets/images/group-training.webp" alt="Group of people resistance training">
+                <img src="assets/images/group-cardio.webp" alt="Group of people on exercise bikes">
+                <img src="assets/images/weights.webp" alt="Weight being added to barbell">
+                <img src="assets/images/weightlifting.webp" alt="Man holding barbell overhead">
+                <img src="assets/images/group-warmup.webp" alt="Group of people instructed during warm-up">
+                <img src="assets/images/photo-coaching.webp" alt="Man coaching woman exercising">
             </div>
         </section>
     </main>
