--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="GymBuddies. Group Training. Gym Training. Fitness, strength, cardio. Coaching. " />
+    <meta name="description" content="GymBuddies. Group Training. Gym Training. Fitness, strength, cardio. Coaching. ">
     <meta name="keywords"
-        content="GymBuddies. group training. workout. gym. coaching. fitness. strength training. cardio training. social. exercise." />
+        content="GymBuddies, group training, workout, gym, coaching, fitness, strength training, cardio training, social, exercise">
     <!-- Title -->
     <title>GymBuddies</title>
 
     <!-- Favicon -->
-    <link rel="icon" sizes="180x180" href="assets/favicon/favicon.gymbuddies.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon.gymbuddies.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon.gymbuddies.png" />
+    <link rel="icon" sizes="180x180" href="assets/favicon/favicon-gymbuddies.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-gymbuddies.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-gymbuddies.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
