Add hero image to Sign-up page

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     
     <!-- Main -->
     <main>
-        <section id="hero-image"></section>
-
+        <div>
+        <section class="hero-image"></section>
+        </div>
         <!-- Join us -->
         <section id="join-us">
             <div id="reasons" class="text-boxes">
