--- a/sign-up.html
+++ b/sign-up.html
@@ -38,6 +38,7 @@
     
     <!-- Main -->
     <main>
+        <div class="hero-image">
         <section>
             <div id="sign-up">
                 <form id="signup-form" class="text-boxes" action="https://formdump.codeinstitute.net" method="post">
@@ -68,6 +69,7 @@
                     <input type="submit" id="submit" value="Submit">
                 </form>
             </div>
+        </div>
         </section>
     </main>
     
