Add Calendar HTML-page, and add to navbar

--- a/calendar.html
+++ b/calendar.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="GymBuddies. Group Training. Gym Training. Fitness, strength, cardio. Coaching. " />
+    <meta name="description"
+        content="GymBuddies. Group Training. Gym Training. Fitness, strength, cardio. Coaching. " />
     <meta name="keywords"
         content="GymBuddies. group training. workout. gym. coaching. fitness. strength training. cardio training. social. exercise." />
     <!-- Title -->
@@ -19,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -30,42 +33,35 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="schedule.html">Calendar</a></li>
-                <li><a href="pictures.html" class="active">Pictures</a></li>
+                <li><a href="calendar.html" class="active">Calendar</a></li>
+                <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="sign-up.html">Sign-Up</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <!-- Main -->
-    <main>
-        <section id="pictures">
-            <h2 class="hidden-heading">Pictures</h2>
-            <div>
-                <img src="assets/images/group-training.webp" alt="Group of people resistance training">
-                <img src="assets/images/group-cardio.webp" alt="Group of people on exercise bikes">
-                <img src="assets/images/weights.webp" alt="Weight being added to barbell">
-                <img src="assets/images/weightlifting.webp" alt="Man holding barbell overhead">
-                <img src="assets/images/group-warmup.webp" alt="Group of people instructed during warm-up">
-                <img src="assets/images/photo-coaching.webp" alt="Man coaching woman exercising">
-            </div>
-        </section>
-    </main>
-    
+    <main>Main content</main>
+
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="visit our Facebook page (opens in new tab)" ><i class="fa-brands fa-square-facebook"></i></a></li>
+                    aria-label="visit our Facebook page (opens in new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a></li>
             <li><a href="http://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="visit our Twitter page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
+                    aria-label="visit our Twitter page (opens in new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a></li>
             <li><a href="http://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
+                    aria-label="visit our Instagram page (opens in new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a></li>
             <li><a href="http://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="visit our Youtube page (opens in new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
+                    aria-label="visit our Youtube page (opens in new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a></li>
         </ul>
     </footer>
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/87712c3752.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
