--- a/sign-up.html
+++ b/sign-up.html
@@ -30,6 +30,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Calendar</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="sign-up.html" class="active">Sign-Up</a></li>
             </ul>
