--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="schedule.html">Calendar</a></li>
+                <li><a href="calendar.html">Calendar</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="sign-up.html">Sign-Up</a></li>
             </ul>
