Remove table from Calendar, use paragraphs instead

--- a/calendar.html
+++ b/calendar.html
@@ -41,56 +41,50 @@
     </header>
 
     <!-- Main -->
-    <main>
+    <main id="schedule">
         <section>
-            <h2>This months schedule</h2>
-            <table id="calendar">
-                <tr>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                    <th>Sunday</th>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+            <h2>This weeks schedule</h2>
+            <div>
+                <h3>Monday</h3>
+                <p>Group Strength</p>
+                <p>20:00-21:00</p>
+            </div>
+            <div>
+                <h3>Tuesday</h3>
+                <p>Group Cardio</p>
+                <p>18:30-19:15</p>
+            </div>
+            <div>
+                <h3>Wednesday</h3>
+                <p>Group Strength</p>
+                <p>20:00-21:00</p>
+            </div>
+            <div>
+                <h3>Thursday</h3>
+                <p>Group Strength</p>
+                <p>20:00-21:00</p>
+                <br>
+                <p>Group Cardio</p>
+                <p>18:30-19:15</p>
+            </div>
+            <div>
+                <h3>Friday</h3>
+                <p>Group Strength</p>
+                <p>20:00-21:00</p>
+                <br>
+                <p>Group Cardio</p>
+                <p>18:30-19:15</p>
+            </div>
+            <div>
+                <h3>Saturday</h3>
+                <p>Group Strength</p>
+                <p>20:00-21:00</p>
+            </div>
+            <div>
+                <h3>Sunday</h3>
+                <p>Group Cardio</p>
+                <p>18:30-19:15</p>
+            </div>
         </section>
     </main>
 
