Style text and add flexbox to calendar page content

--- a/calendar.html
+++ b/calendar.html
@@ -41,49 +41,51 @@
     </header>
 
     <!-- Main -->
-    <main id="schedule">
+    <main>
         <section>
-            <h2>This weeks schedule</h2>
-            <div>
-                <h3>Monday</h3>
-                <p>Group Strength</p>
-                <p>20:00-21:00</p>
-            </div>
-            <div>
-                <h3>Tuesday</h3>
-                <p>Group Cardio</p>
-                <p>18:30-19:15</p>
-            </div>
-            <div>
-                <h3>Wednesday</h3>
-                <p>Group Strength</p>
-                <p>20:00-21:00</p>
-            </div>
-            <div>
-                <h3>Thursday</h3>
-                <p>Group Strength</p>
-                <p>20:00-21:00</p>
-                <br>
-                <p>Group Cardio</p>
-                <p>18:30-19:15</p>
-            </div>
-            <div>
-                <h3>Friday</h3>
-                <p>Group Strength</p>
-                <p>20:00-21:00</p>
-                <br>
-                <p>Group Cardio</p>
-                <p>18:30-19:15</p>
-            </div>
-            <div>
-                <h3>Saturday</h3>
-                <p>Group Strength</p>
-                <p>20:00-21:00</p>
-            </div>
-            <div>
-                <h3>Sunday</h3>
-                <p>Group Cardio</p>
-                <p>18:30-19:15</p>
+            <h2 class="center-heading">This weeks schedule:</h2>
+            <div id="schedule">
+                <div class="days-boxes">
+                    <h3>Monday</h3>
+                    <p>Group Strength</p>
+                    <p>20:00-21:00</p>
+                </div>
+                <div class="days-boxes">
+                    <h3>Tuesday</h3>
+                    <p>Group Cardio</p>
+                    <p>18:30-19:15</p>
+                </div>
+                <div class="days-boxes">
+                    <h3>Wednesday</h3>
+                    <p>Group Strength</p>
+                    <p>20:00-21:00</p>
+                </div>
+                <div class="days-boxes">
+                    <h3>Thursday</h3>
+                    <p>Group Strength</p>
+                    <p>20:00-21:00</p>
+                    <br>
+                    <p>Group Cardio</p>
+                    <p>18:30-19:15</p>
+                </div>
+                <div class="days-boxes">
+                    <h3>Friday</h3>
+                    <p>Group Strength</p>
+                    <p>20:00-21:00</p>
+                    <br>
+                    <p>Group Cardio</p>
+                    <p>18:30-19:15</p>
+                </div>
+                <div class="days-boxes">
+                    <h3>Saturday</h3>
+                    <p>Group Strength</p>
+                    <p>20:00-21:00</p>
+                </div>
+                <div class="days-boxes">
+                    <h3>Sunday</h3>
+                    <p>Group Cardio</p>
+                    <p>18:30-19:15</p>
+                </div>
             </div>
         </section>
     </main>
