--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="calendar.html" class="active">Calendar</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
                 <li><a href="sign-up.html">Sign-Up</a></li>
             </ul>
