Modify text contentfor index and about pages

--- a/about.html
+++ b/about.html
@@ -47,16 +47,25 @@
             <div id="schedule">
                 <div class="days-boxes">
                     <h3>Monday</h3>
+                    <p>Fotball 11</p>
+                    <p>18:00-19:45</p>
+                    <br>
                     <p>Group Strength</p>
                     <p>20:00-21:00</p>
                 </div>
                 <div class="days-boxes">
                     <h3>Tuesday</h3>
+                    <p>Group Strength</p>
+                    <p>16:30-17:30</p>
+                    <br>
                     <p>Group Cardio</p>
                     <p>18:30-19:15</p>
                 </div>
                 <div class="days-boxes">
                     <h3>Wednesday</h3>
+                    <p>Group Cardio</p>
+                    <p>18:30-19:15</p>
+                    <br>
                     <p>Group Strength</p>
                     <p>20:00-21:00</p>
                 </div>
@@ -78,11 +87,17 @@
                 </div>
                 <div class="days-boxes">
                     <h3>Saturday</h3>
+                    <p>Volleyball-tournament</p>
+                    <p>13:00-17:00</p>
+                    <br>
                     <p>Group Strength</p>
                     <p>20:00-21:00</p>
                 </div>
                 <div class="days-boxes">
                     <h3>Sunday</h3>
+                    <p>Basket-ball</p>
+                    <p>10:30-12:00</p>
+                    <br>
                     <p>Group Cardio</p>
                     <p>18:30-19:15</p>
                 </div>
