--- a/index.html
+++ b/index.html
@@ -54,21 +54,17 @@
             <div id="information">
                 <div id="description" class="text-boxes">
                     <h3>Who are we?</h3>
-                    <p>We are a group of trainers and coaches who offer group training at various gyms in Central Stockholm.</p>
+                    <p>We are a collection of trainers and coaches who offer group training and sports activities at our very own fitness-center in Central Stockholm.</p>
                     <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
                 </div>
-                <div id="types-times" class="text-boxes">
-                    <h3>Session types and times</h3>
+                <div id="we-offer" class="text-boxes">
                     <div>
-                        <div>
-                            <h4>Group Strength</h4>
-                            <p>Monday, Wednesday, Thursday, Saturday</p>
-                            <p>19:30-20:30</p>
-                        </div>
-                        <div>
-                            <h4>Group Cardio</h4>
-                            <p>Monday, Tuesday, Thursday, Sunday</p>
-                            <p>17:00-17:45</p>
+                        <h3>We offer:</h3>
+                        <p>Group Strength</p>
+                        <p>Group Cardio</p>
+                        <p>Crossfit</p>
+                        <p>Spinning</p>
+                        <p>Team sports in our very own gym hall</p>
                         </div>
                     </div>
                 </div>
