Modify text and re-size days boxes

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="days-boxes">
                     <h3>Wednesday</h3>
-                    <p>Group Cardio</p>
+                    <p>Spinning</p>
                     <p>18:30-19:15</p>
                     <br>
                     <p>Group Strength</p>
@@ -71,18 +71,18 @@
                 </div>
                 <div class="days-boxes">
                     <h3>Thursday</h3>
-                    <p>Group Strength</p>
-                    <p>20:00-21:00</p>
-                    <br>
                     <p>Group Cardio</p>
                     <p>18:30-19:15</p>
+                    <br>
+                    <p>Crossfit</p>
+                    <p>20:00-21:00</p>
                 </div>
                 <div class="days-boxes">
                     <h3>Friday</h3>
                     <p>Group Strength</p>
                     <p>20:00-21:00</p>
                     <br>
-                    <p>Group Cardio</p>
+                    <p>Spinning</p>
                     <p>18:30-19:15</p>
                 </div>
                 <div class="days-boxes">
