Move 2 text boxes from index to about page, adjust CSS styles for screen functionality

--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
 
     <!-- Main -->
     <main>
+        <!-- Weekly schedule -->
         <section>
             <h2 class="center-heading">This weeks schedule:</h2>
             <div id="schedule">
@@ -101,6 +102,24 @@
                     <p>Group Cardio</p>
                     <p>18:30-19:15</p>
                 </div>
+            </div>
+        </section>
+        <!-- Information about -->
+        <section class="information">
+            <div class="text-boxes">
+                <h3>Who are we?</h3>
+                <p>We are a collection of trainers and coaches who offer group training and sports activities at our very own
+                    fitness-center in Central Stockholm.</p>
+                <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
+            </div>
+            <div class="text-boxes">
+                <h3>We offer:</h3>
+                <p>Group Strength</p>
+                <p>Group Cardio</p>
+                <p>Crossfit</p>
+                <p>Spinning</p>
+                <p>Team sports in our very own gym hall</p>
+            </div>
             </div>
         </section>
     </main>
