--- a/index.html
+++ b/index.html
@@ -42,32 +42,14 @@
         <div>
         <section class="hero-image"></section>
         </div>
-        <!-- Join us -->
-        <section id="join-us">
+        <!-- Information index -->
+        <section class="information">
             <div id="reasons" class="text-boxes">
                 <h2>Come train with us!</h2>
                 <p>Struggeling with getting started?</p>
                 <p>Looking for like-minded individuals to keep you motivated?</p>
                 <p>Want a more social workout-experience?</p>
                 <p>You have come to the right place!</p>
-            </div>
-            <div id="information">
-                <div id="description" class="text-boxes">
-                    <h3>Who are we?</h3>
-                    <p>We are a collection of trainers and coaches who offer group training and sports activities at our very own fitness-center in Central Stockholm.</p>
-                    <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
-                </div>
-                <div id="we-offer" class="text-boxes">
-                    <div>
-                        <h3>We offer:</h3>
-                        <p>Group Strength</p>
-                        <p>Group Cardio</p>
-                        <p>Crossfit</p>
-                        <p>Spinning</p>
-                        <p>Team sports in our very own gym hall</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
