--- a/sign-up.html
+++ b/sign-up.html
@@ -47,29 +47,14 @@
                         <!-- Sign up inputs -->
                         <div id="text-input">
                             <label for="f-name">First name:</label>
-                            <input type="text" id="f-name" name="f-name" required>
+                            <input type="text" id="f-name" name="f-name" class="input-fields" required>
                             <br>
                             <label for="l-name">Last name:</label>
-                            <input type="text" id="l-name" name="l-name" required>
+                            <input type="text" id="l-name" name="l-name" class="input-fields" required>
                             <br>
                             <label for="email">E-mail:</label>
-                            <input type="email" id="email" name="email" required>
+                            <input type="email" id="email" name="email" class="input-fields" required>
                             <br>
-                        </div>
-                        <div>
-                            <h3>Excercise preference: </h3>
-                            <div id="radio-buttons">
-                                <label for="radio-strength">Strength</label>
-                                <input type="radio" id="radio-strength" value="strength" name="training-preference"
-                                    required>
-    
-                                <label for="radio-cardio">Cardio</label>
-                                <input type="radio" id="radio-cardio" value="cardio" name="training-preference" required>
-    
-                                <label for="radio-both">Both</label>
-                                <input type="radio" id="radio-both" value="both" name="training-preference" required
-                                    checked>
-                            </div>
                         </div>
                         <br>
                         <label for="submit"></label>
