Add about-anchor to index page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <p>You have come to the right place!</p>
             </div>
         </section>
+            <div id="click-me">
+                <a href="about.html" id="click-me-button">I am interested</a>
+            </div>
     </main>
     
     <!-- Footer -->
