--- a/about.html
+++ b/about.html
@@ -105,6 +105,7 @@
             </div>
         </section>
         <!-- Information about -->
+        <h2 class="center-heading" >Description</h2>
         <section class="information">
             <div class="text-boxes">
                 <h3>Who are we?</h3>
