--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
             </div>
         </section>
         <!-- Information about -->
-        <h2 class="center-heading" >Description</h2>
+        <h2 class="center-heading">Description</h2>
         <section class="information">
             <div class="text-boxes">
                 <h3>Who are we?</h3>
@@ -121,6 +121,14 @@
                 <p>Spinning</p>
                 <p>Team sports in our very own gym hall</p>
             </div>
+            </div>
+        </section>
+        <h2 class="center-heading">Contact us</h2>
+        <section class="information">
+            <div class="text-boxes">
+            <p>Phone: +46 123 45 67 89</p>
+            <br>
+            <p>E-mail: gym-buddies@gmail.com</p>
             </div>
         </section>
         <!-- Maps -->
