--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 <p>You have come to the right place!</p>
             </div>
         </section>
-            <div id="click-me">
-                <a href="about.html" id="click-me-button">I am interested</a>
-            </div>
+        <!-- Click me -->
+        <div id="click-me">
+            <a href="about.html" id="click-me-button">I am interested</a>
+        </div>
     </main>
     
     <!-- Footer -->
