--- a/about.html
+++ b/about.html
@@ -105,30 +105,34 @@
             </div>
         </section>
         <!-- Information about -->
-        <h2 class="center-heading">Description</h2>
-        <section class="information">
-            <div class="text-boxes">
-                <h3>Who are we?</h3>
-                <p>We are a collection of trainers and coaches who offer group training and sports activities at our very own
-                    fitness-center in Central Stockholm.</p>
-                <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
-            </div>
-            <div class="text-boxes">
-                <h3>We offer:</h3>
-                <p>Group Strength</p>
-                <p>Group Cardio</p>
-                <p>Crossfit</p>
-                <p>Spinning</p>
-                <p>Team sports in our very own gym hall</p>
-            </div>
+        <section>
+            <h2 class="center-heading">Description</h2>
+            <div class="information">
+                <div class="text-boxes">
+                    <h3>Who are we?</h3>
+                    <p>We are a collection of trainers and coaches who offer group training and sports activities at our very
+                        own
+                        fitness-center in Central Stockholm.</p>
+                    <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
+                </div>
+                <div class="text-boxes">
+                    <h3>We offer:</h3>
+                    <p>Group Strength</p>
+                    <p>Group Cardio</p>
+                    <p>Crossfit</p>
+                    <p>Spinning</p>
+                    <p>Team sports in our very own gym hall</p>
+                </div>
             </div>
         </section>
-        <h2 class="center-heading">Contact us</h2>
-        <section class="information">
-            <div class="text-boxes">
-            <p>Phone: +46 123 45 67 89</p>
-            <br>
-            <p>E-mail: gym-buddies@gmail.com</p>
+        <section>
+            <h2 class="center-heading">Contact us</h2>
+            <div class="information">
+                <div class="text-boxes">
+                    <p>Phone: +46 123 45 67 89</p>
+                    <br>
+                    <p>E-mail: gym-buddies@gmail.com</p>
+                </div>
             </div>
         </section>
         <!-- Maps -->
@@ -138,7 +142,8 @@
                 <div>
                     <p><em>Arsenalsgatan 9, 111 47 Stockholm</em></p>
                 </div>
-                <iframe title="maps-location" id="maps" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d2035.134312316046!2d18.073814999999996!3d59.330711400000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e3!4m0!4m5!1s0x465f9d596fd6e75d%3A0x39a8cb03bbea68db!2sArsenalsgatan%209%2C%20111%2047%20Stockholm!3m2!1d59.3307114!2d18.073815!5e0!3m2!1sen!2sse!4v1699275450512!5m2!1sen!2sse"></iframe>
+                <iframe title="maps-location" id="maps"
+                    src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d2035.134312316046!2d18.073814999999996!3d59.330711400000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e3!4m0!4m5!1s0x465f9d596fd6e75d%3A0x39a8cb03bbea68db!2sArsenalsgatan%209%2C%20111%2047%20Stockholm!3m2!1d59.3307114!2d18.073815!5e0!3m2!1sen!2sse!4v1699275450512!5m2!1sen!2sse"></iframe>
             </div>
         </section>
     </main>
