--- a/confirmation.html
+++ b/confirmation.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="refresh" content="10; url=index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description" content="GymBuddies. Group Training. Gym Training. Fitness, strength, cardio. Coaching.">
@@ -40,24 +41,11 @@
         <div class="hero-image"></div>
             <section>
                 <div id="sign-up">
-                    <form id="signup-form" class="text-boxes" action="confirmation.html">
-                        <h2>Join us!</h2>
-                        <!-- Sign up inputs -->
-                        <div id="text-input">
-                            <label for="f-name">First name:</label>
-                            <input type="text" id="f-name" name="f-name" class="input-fields" required>
-                            <br>
-                            <label for="l-name">Last name:</label>
-                            <input type="text" id="l-name" name="l-name" class="input-fields" required>
-                            <br>
-                            <label for="email">E-mail:</label>
-                            <input type="email" id="email" name="email" class="input-fields" required>
-                            <br>
-                        </div>
-                        <br>
-                        <label for="submit"></label>
-                        <input type="submit" id="submit" value="Submit">
-                    </form>
+                    <p>Thanks for signing up to GymBuddies!</p>
+                    <br>
+                    <p>You will be automatically redirected back to the
+                    <a href="index.html">Home-page</a>
+                    in 10 seconds.</p>
                 </div>
             </section>
         </div>
