Correct fav-icon links

--- a/about.html
+++ b/about.html
@@ -14,9 +14,7 @@
     <title>GymBuddies</title>
 
     <!-- Favicon -->
-    <link rel="icon" sizes="180x180" href="assets/favicon/favicon-gymbuddies.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-gymbuddies.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-gymbuddies.png">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon-gymbuddies.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
