Add more images to pictures page

--- a/pictures.html
+++ b/pictures.html
@@ -41,11 +41,17 @@
             <h2 class="hidden-heading">Pictures</h2>
             <div>
                 <img src="assets/images/group-training.webp" alt="Group of people resistance training">
-                <img src="assets/images/group-cardio.webp" alt="Group of people on exercise bikes">
+                <img src="assets/images/group-badminton.webp" alt="Boy hitting badminton-ball with people playing in the background">
                 <img src="assets/images/weights.webp" alt="Weight being added to barbell">
-                <img src="assets/images/weightlifting.webp" alt="Man holding barbell overhead">
-                <img src="assets/images/group-warmup.webp" alt="Group of people instructed during warm-up">
+                <img src="assets/images/group-volleyball.webp" alt="Group of people playing volleyball">
                 <img src="assets/images/photo-coaching.webp" alt="Man coaching woman exercising">
+                <img src="assets/images/weightlifting.webp" alt="Man holding barbell overhead">
+                <img src="assets/images/basketball-1.webp" alt="Group of people playing basketball">
+                <img src="assets/images/group-stretching.webp" alt="Group of people stretching against wall">
+                <img src="assets/images/basketball-2.webp" alt="Men playing basketball">
+                <img src="assets/images/cardio-boxing.webp" alt="Women boxing">
+                <img src="assets/images/group-cardio.webp" alt="Group of people on exercise bikes">
+                <img src="assets/images/group-warmup.webp" alt="Group of people instructed during warm-up">
             </div>
         </section>
     </main>
