Add styles to confirmation message

--- a/confirmation.html
+++ b/confirmation.html
@@ -40,12 +40,16 @@
     <main>
         <div class="hero-image"></div>
             <section>
-                <div id="sign-up">
-                    <p>Thanks for signing up to GymBuddies!</p>
-                    <br>
-                    <p>You will be automatically redirected back to the
-                    <a href="index.html">Home-page</a>
-                    in 10 seconds.</p>
+                <div id="confirmation">
+                    <div>
+                        <p>Thanks for signing up to GymBuddies!</p>
+                    </div>
+                    <div>
+                        <p>You will be automatically redirected back to the
+                            <a href="index.html">Home-page</a>
+                            in 10 seconds.
+                        </p>
+                    </div>
                 </div>
             </section>
         </div>
