Add comments for borrowed code in HTML, format code for all pages

--- a/confirmation.html
+++ b/confirmation.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header (Love Running Project) -->
     <header>
         <a href="index.html">
             <h1 id="logo">Gym-buddies</h1>
@@ -39,22 +39,22 @@
     <!-- Main -->
     <main>
         <div class="hero-image"></div>
-            <section>
-                <div id="confirmation">
-                    <div>
-                        <p>Thanks for signing up to GymBuddies!</p>
-                    </div>
-                    <div>
-                        <p>You will be automatically redirected back to the
-                            <a href="index.html">Home-page</a>
-                            in 10 seconds.
-                        </p>
-                    </div>
+        <section>
+            <div id="confirmation">
+                <div>
+                    <p>Thanks for signing up to GymBuddies!</p>
                 </div>
-            </section>
+                <div>
+                    <p>You will be automatically redirected back to the
+                        <a href="index.html">Home-page</a>
+                        in 10 seconds.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer (Love Running Project) -->
     <footer>
         <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
