--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header (Love Running Project) -->
     <header>
         <a href="index.html">
             <h1 id="logo">Gym-buddies</h1>
@@ -38,7 +38,7 @@
     <!-- Main -->
     <main>
         <div>
-        <section class="hero-image"></section>
+            <section class="hero-image"></section>
         </div>
         <!-- Information index -->
         <section class="information">
@@ -56,7 +56,7 @@
         </div>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer (Love Running Project) -->
     <footer>
         <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
