--- a/sign-up.html
+++ b/sign-up.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header (Love Running Project) -->
     <header>
         <a href="index.html">
             <h1 id="logo">Gym-buddies</h1>
@@ -38,31 +38,31 @@
     <!-- Main -->
     <main>
         <div class="hero-image"></div>
-            <section>
-                <div id="sign-up">
-                    <form id="signup-form" class="text-boxes" action="confirmation.html">
-                        <h2>Join us!</h2>
-                        <!-- Sign up inputs -->
-                        <div id="text-input">
-                            <label for="f-name">First name:</label>
-                            <input type="text" id="f-name" name="f-name" class="input-fields" required>
-                            <br>
-                            <label for="l-name">Last name:</label>
-                            <input type="text" id="l-name" name="l-name" class="input-fields" required>
-                            <br>
-                            <label for="email">E-mail:</label>
-                            <input type="email" id="email" name="email" class="input-fields" required>
-                            <br>
-                        </div>
+        <section>
+            <div id="sign-up">
+                <form id="signup-form" class="text-boxes" action="confirmation.html">
+                    <h2>Join us!</h2>
+                    <!-- Sign up inputs -->
+                    <div id="text-input">
+                        <label for="f-name">First name:</label>
+                        <input type="text" id="f-name" name="f-name" class="input-fields" required>
                         <br>
-                        <label for="submit"></label>
-                        <input type="submit" id="submit" value="Submit">
-                    </form>
-                </div>
-            </section>
+                        <label for="l-name">Last name:</label>
+                        <input type="text" id="l-name" name="l-name" class="input-fields" required>
+                        <br>
+                        <label for="email">E-mail:</label>
+                        <input type="email" id="email" name="email" class="input-fields" required>
+                        <br>
+                    </div>
+                    <br>
+                    <label for="submit"></label>
+                    <input type="submit" id="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer (Love Running Project) -->
     <footer>
         <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
