--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Header (Love Running Project) -->
     <header>
         <a href="index.html">
             <h1 id="logo">Gym-buddies</h1>
@@ -108,9 +108,8 @@
             <div class="information">
                 <div class="text-boxes">
                     <h3>Who are we?</h3>
-                    <p>We are a collection of trainers and coaches who offer group training and sports activities at our very
-                        own
-                        fitness-center in Central Stockholm.</p>
+                    <p>We are a collection of trainers and coaches who offer group training and sports activities at our
+                        very own fitness-center in Central Stockholm.</p>
                     <p>Our passion is making fitness more social, so join us for your favorite type of exercise!</p>
                 </div>
                 <div class="text-boxes">
@@ -146,7 +145,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer (Love Running Project) -->
     <footer>
         <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
