--- a/pictures.html
+++ b/pictures.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header (Love Running Project) -->
     <header>
         <a href="index.html">
             <h1 id="logo">Gym-buddies</h1>
@@ -35,13 +35,14 @@
         </nav>
     </header>
     
-    <!-- Main -->
+    <!-- Main (Love Running Project)-->
     <main>
         <section id="pictures">
             <h2 class="hidden-heading">Pictures</h2>
             <div>
                 <img src="assets/images/group-training.webp" alt="Group of people resistance training">
-                <img src="assets/images/group-badminton.webp" alt="Boy hitting badminton-ball with people playing in the background">
+                <img src="assets/images/group-badminton.webp"
+                    alt="Boy hitting badminton-ball with people playing in the background">
                 <img src="assets/images/weights.webp" alt="Weight being added to barbell">
                 <img src="assets/images/group-volleyball.webp" alt="Group of people playing volleyball">
                 <img src="assets/images/photo-coaching.webp" alt="Man coaching woman exercising">
@@ -56,7 +57,7 @@
         </section>
     </main>
     
-    <!-- Footer -->
+    <!-- Footer (Love Running Project) -->
     <footer>
         <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener"
